# COMP345

./: CMakeLists.txt  README.md
data/: 2player.map  3player.map  3player.viz  4player.map  4player.viz  5player.map  5player.viz
docs/: 3player.xcf  5player.xcf  Doxyfile.in
src/: DiceRollingFacility.cpp  DiceRollingFacility.hpp  Game.cpp  Game.hpp  GameDeck.cpp  GameDeck.hpp  GraphView.cpp  GraphView.hpp  Map.cpp  Map.hpp  MapProperties.hpp  Player.cpp  Player.hpp  RegionNode.cpp  RegionNode.hpp  Tokens.hpp  Utils.hpp  main.cpp
src/Tokens/: EMapToken.hpp  ERaceBanner.hpp  ERaceToken.hpp  ESpecialPower.hpp  EVictoryCoin.hpp  RemovebleStorageTray.cpp  RemovebleStorageTray.hpp  TokenStack.hpp  TokenVec.hpp  Tokens.hpp  VacuumTray.cpp  VacuumTray.hpp
src/tests/: DiceRollingFacilityTest.cpp  MapGen.cpp  MapLoadingTest.cpp  MapTest.cpp  PlayerTest.cpp  SerializationTest.cpp  TokenTest.cpp
src/tests/data/: 2player.map  2player.viz  2player_invalid.map  2player_invalid.viz  InvalidSchema.map  Map1.map  Map1.viz  Map2.map  Map2.viz
